--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "07-restserver",
+  "name": "myapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "Curso node",
+  "engines": "10.15.3",
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
@@ -10,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.4.20",
+    "mongoose-unique-validator": "^2.0.2",
+    "underscore": "^1.9.1"
   }
 }
